<resources>
    <string name="app_name">یادمان</string>
    <string name="main_title">صفحه اصلی</string>
    <string name="toolbar_back_button_description">Toolbar Back Button</string>
    <string name="dialog_title">درس ها را انتخاب کنید</string>
    <string name="no_card">کارتی موجود نیست</string>
    <string name="showAnswer">نمایش پاسخ</string>
    <string name="card_title">نمایش کارت ها</string>
    <string name="database_version_key">database_version</string>
    <string name="select_year">پایه ها را انتخاب کنید</string>
    <string name="ok_Button">خوبه</string>
    <string name="cancel_button">بیخیال</string>
    <string name="year_one">سایر دروس</string>
    <string name="year_two">سال دوم دبیرستان</string>
    <string name="year_three">سال سوم دبیرستان</string>
    <string name="year_four">پیش دانشگاهی</string>
    <string name="select_card_title">انتخاب کارت ها</string>
    <string name="dialog_title_select_subjects">مباحث را انتخاب کنید</string>
    <string name="btn_select_lesson">درس را انتخاب کنید</string>
    <string name="text_login_username">نام کاربری</string>
    <string name="text_password">رمز عبور</string>
    <string name="text_login">ورود</string>
    <string name="text_go_to_signup">ثبت نام نکرده اید؟</string>
    <string name="text_verify">کد تایید</string>
    <string name="background_description">BackGroundImage</string>
    <string name="text_go_login">قبلا ثبت نام کرده اید؟</string>
    <string name="text_signup">ثبت نام</string>
    <string name="text_phone_number">شماره تلفن</string>
    <string name="question_image">Question Image</string>
    <string name="answer_image">Answer Image</string>
    <string name="log_out">خروج از حساب</string>
    <string name="text_select_lesson">درس مورد نظر خود را انتخاب کنید</string>
    <string name="text_login_success">خوش آمدید</string>
    <string name="text_login_fail">ورود ناموفق</string>
    <string name="text_connect_failed">وضعیت اینترنت خود را چک کنید!</string>
    <string name="success_sign_up">با موفقیت ثبت نام شدید</string>
    <string name="failed_sign_up">نام کاربری تکراری است</string>
    <string name="notification_title">یادآوری کارت های امروز</string>
    <string name="notification_title2">هماهنگ سازی</string>
    <string name="notification_title_server">یادآوری به روز رسانی</string>
    <string name="notification_text">تعداد کارت های آماده برای مرور:</string>
    <string name="notification_text2">کارت ها را از طریق اینترنت هماهنگ کنید تا در صورت خروج از حساب یا اتصال با دستگاه دیگر به اطلاعات خود دسترسی داشته باشید</string>
    <string name="notification_text_server">پیام سرور</string>
    <string name="title_activity_settings">تنظیمات</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="setting_header_general">تنظیمات عمومی</string>

    <string name="setting_header_account">تنظیمات امانت</string>
    <string name="setting_change_email">تغییر ایمیل</string>
    <string name="setting_change_password">تغییر رمز عبور</string>
    <string name="setting_delete_account">حذف اکانت</string>
    <string name="setting_save_photos">آیا عکس کارت ها بعد از دانلود ذخیره شوند</string>
    <string name="text_new_email">ایمیل جدید</string>
    <string name="menu_settings">تنظیمات</string>
    <string name="last_notification_date_key">last_notification_date</string>
    <string name="last_notification_date_key2">last_notification_date2</string>

    <string name="toolbar_sync_button">Sync Button</string>
    <string name="button_select_card">انتخاب کارت</string>
    <string name="button_enter_card">ورود به کارت</string>
    <string name="updating_ended">کارت ها با سرور هماهنگ شد</string>
    <string name="updateing_database">در حال هماهنگ سازی کارت ها با سرور</string>
    <string name="text_forget_password">رمز عبور خود را فراموش کردید؟</string>
    <string name="error_message">Can Not Move</string>
    <string name="intro_image">Intro Image</string>
    <string name="key_is_tutorial_showed">is_tutorial_showed</string>
    <string name="key_is_tutorial_selected_showed">is_tutorial_selected_showed</string>
    <string name="text_all_cards"> تمامی کارت ها :</string>
    <string name="text_today_cards">کارت های امروز : </string>
    <string name="menu_help">آموزش برنامه</string>
    <string name="calculating">در حال محاسبه...</string>
    <string name="base_url">http://fekr-afarinan.ir/Leitner/</string>
    <string name="description_wrong_answer">Wrong Answer</string>
    <string name="description_correct_answer">Correct Answer</string>
    <string name="menu_shopping">فروشگاه</string>
    <string name="text_choose_price">درس مورد نظر را انتخاب کنید</string>
    <string name="txt_price_one">تاریخ ادبیات</string>
    <string name="txt_price_two">دینی</string>
    <string name="txt_price_three">لغت</string>
    <string name="txt_price_four">املا</string>
    <string name="description_price_image">Price Image</string>
    <string name="text_font_size">اندازه فونت</string>
    <string name="text_sample_text_size">نمونه متن</string>
    <string name="token_key">token_key</string>
    <string name="button_shopping">فروشگاه</string>
    <string name="setting_notification">وصل یا قطع ارسال پیام</string>
    <string name="has_to_notification_key">has_to_notification_key</string>
    <string name="dbhelper_version_key">dbhelper_version_key</string>
    <string name="description_logo">First Page\'s Logo</string>
    <string name="text_loading_page">لطفا منتظر بمانید…</string>
    <string name="description_first_page_loading_bar">First Page Loading Bar</string>
    <string name="text_no_notif">هیچ خبری موجود نیست</string>
    <string name="select_quiz">افزودن کارت ها بر اساس آزمون</string>
    <string name="text_verification_title">تایید</string>
    <string name="text_email">ایمیل</string>
    <string name="text_retry">ارسال دوباره کد تایید</string>
    <string name="wrong_verify_code">کد تایید غلط است</string>
    <string name="text_username">نام کاربری</string>
    <string name="text_retry_password">تکرار رمز عبور</string>
    <string name="text_send_sms">ارسال کد تایید</string>
    <string name="spinner_title">انتخاب درس</string>
    <string name="exit">آیا میخواهید از برنامه خارج شوید؟</string>
    <string name="subject_bought">این محصول قبلا خریداری شده است</string>
    <string name="text_email_signup">ثبت نام با ایمیل</string>
    <string name="email_verify">لطفا ایمیل خود را تایید کنید</string>
    <string name="txt_price_five">زبان انگلیسی</string>
    <string name="showNextCard">نمایش کارت بعدی</string>
    <string name="failed_sign_up_email">نام کاربری یا ایمیل تکراری است</string>
    <string name="dont_have_permission">لطفا دسترسی های لازم را به برنامه بدهید</string>
    <string name="example_phone_number">09121234567</string>
    <string name="not_start_with_09">شماره تلفن باید با 09 آغاز شود</string>
    <string name="number_length_not_valid">شماره موبایل باید 11 رقمی باشد</string>
    <string name="discount_question">آیا میخواهید از کد تخفیف استفاده کنید؟</string>
    <string name="discount_code">کد تخفیف</string>
    <string name="failed_connection">خطا در برقراری ارتباط</string>
    <string name="email_or_phone">ایمیل یا شماره تلفن</string>

</resources>
