<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/background_description"
            android:scaleType="center"
            android:src="@drawable/background" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/text_signup"
            android:textColor="#FFF"
            android:textSize="20pt"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9" />

            <TextView
                android:id="@+id/txtPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/text_phone_number"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#70FFFFFF"
                android:textStyle="bold" />
            <EditText
                android:hint="@string/example_phone_number"
                android:id="@+id/editPhoneNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#999999"
                android:textSize="7pt" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button_login"
                android:text="@string/text_send_sms"
                android:textColor="#575955"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEmailSignup"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_email_signup"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btnGoLogin"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_go_login"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
