<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2a2a2a"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtFontSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_sample_text_size"
                android:textColor="#ffba26"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtChangeFontSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/text_font_size"
                android:textColor="#ffba26"
                android:textStyle="bold" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarFontSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btnChangeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:gravity="start|center_vertical"
            android:text="@string/setting_change_email"
            android:textColor="#ffba26"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:gravity="start|center_vertical"
            android:text="@string/setting_change_password"
            android:textColor="#ffba26"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkSavePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="start|center_vertical"
            android:text="@string/setting_save_photos"
            android:textColor="#ffba26"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_power_settings_new_black_24dp"
            android:gravity="start|center_vertical"
            android:text="@string/log_out"
            android:textColor="#ffba26"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0" />

        <Button
            android:id="@+id/btnDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_delete_black_24dp"
            android:gravity="start|center_vertical"
            android:text="@string/setting_delete_account"
            android:textColor="#ffba26"
            android:textStyle="bold" />
        <CheckBox
            android:id="@+id/checkNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="start|center_vertical"
            android:text="@string/setting_notification"
            android:textColor="#ffba26"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>