<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="ir.fekrafarinan.yademman.Leitner.Activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/background_description"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/background" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/text_login"
            android:textColor="#FFF"
            android:textSize="20pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLoginUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/text_login_username"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#70FFFFFF"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editVerify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:textSize="7pt" />

            <TextView
                android:id="@+id/txtLoginPassWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/text_password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#70FFFFFF"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:textSize="7pt" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_button_login"
                android:text="@string/text_login"
                android:textColor="#575955"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnGoSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:text="@string/text_go_to_signup"
                android:textColor="#FFFF" />

            <Button
                android:id="@+id/btnForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:text="@string/text_forget_password"
                android:textColor="#FFFF" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
