<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/background_description"
            android:scaleType="center"
            android:src="@drawable/background" />

        <TextView
            android:id="@+id/txtVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/text_verification_title"
            android:textColor="#FFF"
            android:textSize="20pt"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9" />

            <TextView
                android:id="@+id/txtVerifyCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/text_verify"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#70FFFFFF"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editVerify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:textSize="7pt" />

            <cn.iwgang.countdownview.CountdownView
                android:id="@+id/cv_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:isHideTimeBackground="true"
                app:isShowMinute="true"
                app:isShowSecond="true"
                app:isTimeTextBold="true"
                app:suffixGravity="bottom"
                app:suffixTextColor="#000000"
                app:suffixTextSize="12sp"
                app:timeTextColor="#70FFFFFF"
                app:timeTextSize="20sp" />

            <Button
                android:id="@+id/btn_retry"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_retry"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button_login"
                android:text="@string/text_verification_title"
                android:textColor="#575955"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEmailSignup"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_email_signup"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btnGoLogin"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_go_login"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
